# geolab

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py  mcp_server.py  mcp_widget.py  schemas.py  services.py
backend/app/agent/: README.md  __init__.py  examples.py  llm_planner.py  models.py  ollama_planner.py  openai_planner.py  planner.py  registry.py  router.py  schemas.py  script_planner.py  tools.py
backend/app/geometry/: README.md  __init__.py  engine.py  function_expression.py  models.py  rendering.py  router.py  script.py  workspace.py
backend/app/symbolic/: README.md  __init__.py
backend/tests/: __init__.py  test_agent_llm_planner.py  test_agent_ollama_planner.py  test_agent_openai_planner.py  test_agent_planner.py  test_agent_planner_api.py  test_agent_tools.py  test_agent_tools_api.py  test_geometry_models.py  test_geometry_script.py  test_geometry_script_api.py  test_health.py  test_mcp_api.py
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-06-15-assistant-provider-config.md
docs/superpowers/specs/: 2026-06-15-assistant-provider-config-design.md  2026-06-15-cancel-button-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
frontend/src/agent/: README.md  planner.ts  scriptGenerator.test.ts  scriptGenerator.ts  types.ts  useAssistantConfig.test.tsx  useAssistantConfig.ts
shared/fixtures/: basic-geometry.json
(+52 files in other folders)
