[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mathllm-backend"
version = "0.1.0"
description = "Deterministic geometry, symbolic, and agent services for MathLLM"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40",
  "fastapi>=0.115,<1.0",
  "mcp>=1.27,<2",
  "pydantic>=2.10,<3.0",
  "sympy>=1.13,<2.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
